@@ -1,6 +1,7 @@
 0.19.0
 ------
 
+* Expose `get_registry()` method of `RequestsMock` object. Replaces internal `_get_registry()`.
 * Added support for `async/await` functions.
 
 0.18.0
